<resources>
    <string name="app_name">CS3270A8 Preszler</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="course_code">Course Code</string>
    <string name="start_at">Start At</string>
    <string name="end_at">End At</string>
    <string name="fields_cannot_be_blank">Fields cannot be blank</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="id_label">ID:</string>
    <string name="name_label">Name:</string>
    <string name="course_code_label">Course Code:</string>
    <string name="start_at_label">Start At:</string>
    <string name="end_at_label">End At:</string>
    <string name="delete_course">Delete course?</string>
    <string name="confirm_delete_course_message">Do you really want to delete this course?</string>
</resources>
